# interact-se-connector

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  pyproject.toml  pytest.ini
src/: application.py  main.py
src/interact_se_connector/: application.py  connector.py  git_helper.py  main.py  scrapper.py  scrapper_grubermarkdown.py  scrapper_hugo.py  scrapper_jupyterbook.py
tests/: test_git_helper.py
tests/interact_se_connector/: hugo_expected_body.txt  hugo_input.html  test_connector.py  test_main.py  test_scrapper.py
tests/interact_se_connector/hugo/: hugo_input_content_only.html-extract  hugo_input_full_page.html
tests/interact_se_connector/jupyterbook/: jupyterbook_input.html
tests/interact_se_connector/markdown/: lightning_talks.md
tests/interact_se_connector/unsupported/: unsupported_input.html
tests/test_static_sites/: get_samples.sh
