[tool.poetry]
name = "interact-se-connector"
version = "0.1.0"
description = ""
authors = ["Andy Smith <andrewphilipsmith@users.noreply.github.com>"]

packages = [
    { include = "interact_se_connector", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
icecream = "^2.1.3"
beautifulsoup4 = "^4.11.1"
Markdown = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
